--- a/src/views/pages/page.mustache
+++ b/src/views/pages/page.mustache
@@ -6,12 +6,14 @@
 {{/banner}}
 
 <div class="container list">
+    {{#list}}
     <div class="item">
-        <img src="images/pastor-alemao.jpg" class="item--image" />
-        <div class="item--name">Pastor-alemão</div>
-        <div class="item--color">Cor: Amarelo e Preto</div>
-        <div class="item--genre">Gênero: Masculino</div>
+        <img src="images/{{image}}" class="item--image" />
+        <div class="{{name}}">Pastor-alemão</div>
+        <div class="{{color}}">Cor: Amarelo e Preto</div>
+        <div class="{{sex}}">Gênero: Masculino</div>
     </div>
+    {{/list}}
 </div>
 
 {{>partials/footer}}
