--- a/src/views/pages/page.mustache
+++ b/src/views/pages/page.mustache
@@ -9,11 +9,17 @@
     {{#list}}
     <div class="item">
         <img src="images/{{image}}" class="item--image" />
-        <div class="{{name}}">Pastor-alemão</div>
-        <div class="{{color}}">Cor: Amarelo e Preto</div>
-        <div class="{{sex}}">Gênero: Masculino</div>
+        <div class="item--name">{{name}}</div>
+        <div class="item--color">{{color}}</div>
+        <div class="item--genre">{{sex}}</div>
     </div>
     {{/list}}
 </div>
+
+{{^list}}
+<div class="container no-list"> 
+    <h2> Não existem animais disponíveis nestas condições</h2>
+</div>
+{{/list}}
 
 {{>partials/footer}}
